Name:                SteganographyJs
Version:             0.0.1
Author:              Marcus Ofenhed <marcus@conditionraise.se>
Maintainer:          Marcus Ofenhed <marcus@conditionraise.se>
License:             MIT
License-File:        LICENSE
Synopsis:            Steganography program.
Description:         This program is designed to hide information in images without
                     possibility of detection. The information is encryted and
                     hidden at random locations in the image.
Category:            Cryptography
cabal-version:       >= 1.10
Build-Type:          Simple


Executable SteganographyJs
  Main-Is:           Main.hs
  Default-Language:  Haskell2010
  hs-source-dirs:      src
  Build-Depends:     Steganography

Source-Repository head
  Type:       git
  Location:   https://github.com/Ofenhed/Steganography
