Name:                SteganographyJs
Version:             0.0.1
Author:              Marcus Ofenhed <marcus@conditionraise.se>
Maintainer:          Marcus Ofenhed <marcus@conditionraise.se>
License:             MIT
License-File:        LICENSE
Synopsis:            Steganography program.
Description:         This program is designed to hide information in images without
                     possibility of detection. The information is encryted and
                     hidden at random locations in the image.
Category:            Cryptography
cabal-version:       >= 1.10
Build-Type:          Simple


Executable SteganographyJs
  Main-Is:           Main.hs
  Default-Language:  Haskell2010
  hs-source-dirs:      src,Steganography/src/
  Build-Depends:     base>= 4 && <5,
                     array,
                     asn1-encoding,
                     asn1-types,
                     base64-bytestring,
                     binary,
                     bitstring,
                     BitStringRandomMonad >= 0.2.0.1,
                     bytestring,
                     console-program,
                     cryptonite,
                     JuicyPixels,
                     Lazy-Pbkdf2 >= 2.1.0,
                     memory,
                     pem,
                     time,
                     transformers,
                     x509,
                     x509-store,
                     SHA,
                     ghcjs-dom-jsffi

Source-Repository head
  Type:       git
  Location:   https://github.com/Ofenhed/Steganography
